# filesystem-operations-mcp

./: .gitignore  Makefile  README.md  multi_file_reader_mcp.py  pyproject.toml
.roo/: mcp.json
src/filesystem_operations_mcp/: __init__.py  server.py
src/filesystem_operations_mcp/models/: __init__.py  errors.py  settings.py  test_settings.py
src/filesystem_operations_mcp/servers/: __init__.py  multi_file_operations.py  multi_folder_operations.py
src/filesystem_operations_mcp/utils/: exception_handling.py
tests/: test_exception_handling.py  test_file_operations.py  test_folder_operations.py  test_server.py  test_server.py.disabled
