[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-file-reader-mcp"
version = "0.1.0"
description = "An MCP server that can read multiple files at once."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Bill Easton", email = "williamseaston@gmail.com"}, 
]
dependencies = [
    "fastmcp>=0.4.0",
]
[project.urls]
"Homepage" = "https://github.com/strawgate/mcp-many-files"
"Repository" = "https://github.com/strawgate/mcp-many-files"


[project.optional-dependencies]
dev = [ 
]

[project.scripts]
multi-file-reader-mcp = "multi_file_reader_mcp:main"
